# coloom

./: CMakeLists.txt  README.md  specification.md  vcpkg.json
src/: columnar_db.cpp
tests/: test_columnar_db.cpp
